--- a/index.html
+++ b/index.html
@@ -13,90 +13,91 @@
 </head>
 <body>
 
+    
 <!-- шапка -->
 <header class="header">
     <nav>
-    <a href="./index.html" class="logo">WebStudio</a>
-    <ul class="header-nav list">
-        <li><a href="" class="header-studio link">Студия</a></li>
-        <li><a href="/portfolio.html" class="header-portfolio link">Портфолио</a></li>
-        <li><a href="" class="header-contacts link">Контакты</a></li>
+    <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+    <ul class="header-nav">
+        <li><a href="" class="header-studio">Студия</a></li>
+        <li><a href="/portfolio.html" class="header-portfolio">Портфолио</a></li>
+        <li><a href="" class="header-contacts">Контакты</a></li>
     </ul>
     </nav>
-    <ul class="auth-nav list">
+    <ul class="auth-nav">
         <li>
-            <a href="mailto:info@devstudio.com" class="auth-nav-mail">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="auth-mail">info@devstudio.com</a>
         </li>
         <li>
-            <a href="tel:+380961111111" class="auth-nav-tel">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="auth-tel">+38 096 111 11 11</a>
         </li>
     </ul>
 </header>
 
 <main>
-<!-- блок з кнопкою -->
+<!-- hero -->
 <div class="block-hero">
     <section>
         <h1 class="hero-title">Эффективные решения <br/> для вашего бизнеса</h1>
         <button type="button" class="button">Заказать услугу</button>
-    </section>
+    </section> 
 </div>
 
-<!-- внимание к деталям -->
-<section class="section">
-    <h2 class="section-title">Внимание к деталям</h2>
+<!-- Внимание к деталям -->
+<section>
+    <h2></h2>
     <ul class="details-list">
         <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="title-attention">Внимание к деталям</h3>
+            <p class="text-att">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <h3 class="title-time">Пунктуальность</h3>
+            <p class="text-time">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
         <li>
-            <h3 class="title">Планирование</h3>
-            <p class="text"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <h3 class="title-plans">Планирование</h3>
+            <p class="text-plans"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="title-tech">Современные технологии</h3>
+            <p class="text-tech">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
     </ul>
 </section>
 
-<!-- блок "чим ми займаємось" -->
-<section class="section">
-    <h2 class="section-title">Чем мы занимаемся</h2>
+<!-- блок "Чем мы занимаемся" -->
+<section class="block-works">
+    <h2 class="section-works">Чем мы занимаемся</h2>
     <ul>
-        <li><img src="./images/web.jpg" alt="програмування" height="294" width="370" /></li>
-        <li><img src="./images/app.jpg" alt="створення мобільних додатків" height="294" width="370"/></li>
-        <li><img src="./images/design.jpg" alt="дизайн" height="294" width="370" /></li>
+        <li class="img-web"><img src="./images/web.jpg" alt="програмування" height="294" width="370" /></li>
+        <li class="img-app"><img src="./images/app.jpg" alt="створення мобільних додатків" height="294" width="370"/></li>
+        <li class="img-design"><img src="./images/design.jpg" alt="дизайн" height="294" width="370" /></li>
     </ul>
 </section>
 
 
 <!-- блок "наша команда" -->
 <div>
-    <section class="section">
-        <h2 class="section-title">Наша команда</h2>
+    <section class="block-team">
+        <h2 class="section-team">Наша команда</h2>
         <ul>
-            <li>
+            <li class="igor" >
                 <img src="./images/igor.jpg" alt="фото Игорь Демьяненко" height="260" width="270"/>
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
-            <li>
+            <li class="olga">
                 <img src="./images/olga.jpg" alt="фото Ольга Репина" height="260" width="270"/>
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
-            <li>
+            <li class="nikolay">
                 <img src="./images/nikolay.jpg" alt="фото Николай Тарасов" height="260" width="270"/>
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
-            <li>
+            <li class="miha">
                 <img src="./images/mikhail.jpg" alt="фото Михаил Ермаков" height="260" width="270" />
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
@@ -107,13 +108,13 @@
 </main>
 
 <!-- підвал сторінки -->
-<footer class="block-footer">
-    <a href="./index.html">WebStudio</a>
+<footer class="footer-block">
+    <a href="./index.html" class="logo-web">Web<span class="logo-footer">Studio</span></a>
     <address>
     <ul>
-        <li><a href="https://goo.gl/maps/1dgc2BqWhhMgBrwW8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="https://goo.gl/maps/1dgc2BqWhhMgBrwW8" target="_blank" rel="noopener noreferrer" class="footer-adress">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="mailto:info@example.com" class="footer-mail">info@example.com</a></li>
+        <li><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
     </ul>
     </address>
 </footer>
