--- a/portfolio.html
+++ b/portfolio.html
@@ -5,45 +5,114 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
-<!-- шапка -->
-<header class="header">
-    <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
-        <ul class="header-nav list">
-            <li><a href="" class="link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
-        </ul>
-    </nav>
-    <ul class="auth-nav list">
-        <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-    </ul>
-</header>
 
 <body>
 
-</body>
+    <!-- шапка -->
+    <header class="header">
+        <nav>
+            <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+            <ul class="header-nav">
+                <li><a href="" class="header-studio">Студия</a></li>
+                <li><a href="/" class="header-portfolio">Портфолио</a></li>
+                <li><a href="" class="header-contacts">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul class="auth-nav">
+            <li>
+                <a href="mailto:info@devstudio.com" class="auth-mail">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111" class="auth-tel">+38 096 111 11 11</a>
+            </li>
+        </ul>
+    </header>
 
-<!-- підвал сторінки -->
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <main>
+        <!-- filters -->
+        <div>
+            <ul class="filters">
+                <li type="button" class="all-button">Все</li>
+                <li type="button" class="sites-button">Веб сайты</li>
+                <li type="button" class="app-button">Приложения</li>
+                <li type="button" class="design-button">Дизайн</li>
+                <li type="button" class="marketing-button">Маркетинг</li>
+            </ul>
+        </div>
+
+    <section>
+        <ul class="portfolio-works">
+            <li class="technokryak">
+                <img src="./images/01technokryak.jpg" alt="Тенокряк веб-сайт" height="294" width="370" />
+                <h3>Технокряк</h3>
+                <p>Маркетинг</p>
+            </li>
+            <li class="poster">
+                <img src="./images/02poster_orlean.jpg" alt="Постер New Orlean" height="294" width="370" />
+                <h3>Постер New Orlean vs Golden Star</h3>
+                <p>Приложение</p>
+            </li>
+            <li class="seafood">
+                <img src="./images/03seafood.jpg" alt="Ресторан Seafood" height="294" width="370" />
+                <h3>Ресторан Seafood</h3>
+                <p>Веб-сайт</p>
+            </li>
+            <li class="prime-works">
+                <img src="./images/04prime.jpg" alt="Проект Prime" height="294" width="370" />
+                <h3>Проект Prime</h3>
+                <p>Маркетинг</p>
+            </li>
+            <li class="boxes-works">
+                <img src="./images/05boxes.jpg" alt="Проект Boxes" height="294" width="370" />
+                <h3>Проект Boxes</h3>
+                <p>Приложение</p>
+            </li>
+            <li class="inspiration-works">
+                <img src="./images/06Inspiration.jpg" alt="Inspiration has no Borders" height="294" width="370" />
+                <h3>Inspiration has no Borders</h3>
+                <p>Веб-сайт</p> 
+            </li>
+            <li class="limited">
+                <img src="./images/07limit.jpg" alt="Издание Limited Edition" height="294" width="370" />
+                <h3>Издание Limited Edition</h3>
+                <p>Дизайн</p>
+            </li>
+            <li class="lab-works">
+                <img src="./images/08lab.jpg" alt="Проект LAB" height="294" width="370" />
+                <h3>Проект LAB</h3>
+                <p>Маркетинг</p>
+            </li>
+             <li class="growing-works">
+                <img src="./images/09growing.jpg" alt="Growing Business" height="294" width="370" />
+                <h3>Growing Business</h3>
+                <p>Приложение</p>
+            </li>
+
+        </ul>
+    </section>
+
+    </main>
+
+    <!-- підвал сторінки -->
+    <footer class="footer-block">
+        <a href="./index.html" class="logo-web">Web<span class="logo-footer">Studio</span></a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/1dgc2BqWhhMgBrwW8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
-                        Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/1dgc2BqWhhMgBrwW8" target="_blank" rel="noopener noreferrer"
+                        class="footer-adress">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@example.com" class="footer-mail">info@example.com</a></li>
+                <li><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
-    </body>
-    
-    </html>
+</body>
+
+</html>
