--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
     <ul class="header-nav">
         <li><a href="" class="header-studio">Студия</a></li>
-        <li><a href="/portfolio.html" class="header-portfolio">Портфолио</a></li>
+        <li><a href="./portfolio.html" class="header-portfolio">Портфолио</a></li>
         <li><a href="" class="header-contacts">Контакты</a></li>
     </ul>
     </nav>
