--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul class="header-nav">
-                <li><a href="" class="header-studio">Студия</a></li>
+                <li><a href="./index.html" class="header-studio">Студия</a></li>
                 <li><a href="/" class="header-portfolio">Портфолио</a></li>
                 <li><a href="" class="header-contacts">Контакты</a></li>
             </ul>
@@ -40,11 +40,11 @@
         <!-- filters -->
         <div>
             <ul class="filters">
-                <li type="button" class="all-button">Все</li>
-                <li type="button" class="sites-button">Веб сайты</li>
-                <li type="button" class="app-button">Приложения</li>
-                <li type="button" class="design-button">Дизайн</li>
-                <li type="button" class="marketing-button">Маркетинг</li>
+                <li class="all-button" type="button" >Все</li>
+                <li class="sites-button" type="button" >Веб сайты</li>
+                <li class="app-button" type="button">Приложения</li>
+                <li class="design-button" type="button">Дизайн</li>
+                <li class="marketing-button" type="button">Маркетинг</li>
             </ul>
         </div>
 
