--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul class="header-nav">
-                <li><a href="./index.html" class="header-studio">Студия</a></li>
+                <li><a href="./index.html" class="header-studio current">Студия</a></li>
                 <li><a href="/" class="header-portfolio">Портфолио</a></li>
                 <li><a href="" class="header-contacts">Контакты</a></li>
             </ul>
@@ -37,18 +37,19 @@
     </header>
 
     <main>
-        <!-- filters -->
-        <div>
+        
+ 
+
+    <section>
+            <h1></h1>
+    <!-- filters -->
             <ul class="filters">
-                <li class="all-button" type="button" >Все</li>
-                <li class="sites-button" type="button" >Веб сайты</li>
+                <li class="all-button" type="button">Все</li>
+                 <li class="sites-button" type="button">Веб сайты</li>
                 <li class="app-button" type="button">Приложения</li>
                 <li class="design-button" type="button">Дизайн</li>
                 <li class="marketing-button" type="button">Маркетинг</li>
             </ul>
-        </div>
-
-    <section>
         <ul class="portfolio-works">
             <li class="technokryak">
                 <img src="./images/01technokryak.jpg" alt="Тенокряк веб-сайт" height="294" width="370" />
