--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul class="header-nav">
-                <li><a href="./index.html" class="header-studio current">Студия</a></li>
-                <li><a href="/" class="header-portfolio">Портфолио</a></li>
+                <li><a href="./index.html" class="header-studio">Студия</a></li>
+                <li><a href="" class="header-portfolio active">Портфолио</a></li>
                 <li><a href="" class="header-contacts">Контакты</a></li>
             </ul>
         </nav>
