change active link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
     <ul class="header-nav">
         <li><a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a></li>
-        <li><a href="" class="header-studio active">Студия</a></li>
+        <li><a href="/" class="header-studio active">Студия</a></li>
         <li><a href="./portfolio.html" class="header-portfolio">Портфолио</a></li>
         <li><a href="" class="header-contacts">Контакты</a></li>
     </ul>
