--- a/index.html
+++ b/index.html
@@ -16,22 +16,21 @@
     
 <!-- Header -->
 <header class="header">
-    <nav>
-    <div class="nav-container container">
-                    <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+    <div class="site-nav container">
+        <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
         <nav class="header-nav">
-            <ul class="header-list">
-                <li><a href="/" class="header-list-nav active">Студия</a></li>
-                <li><a href="./portfolio.html" class="header-list-nav">Портфолио</a></li>
-                <li><a href="" class="header-list-nav">Контакты</a></li>
+            <ul class="header-list list">
+                <li class="header-link"><a href="/" class="header-list-nav active">Студия</a></li>
+                <li class="header-link"><a href="./portfolio.html" class="header-list-nav">Портфолио</a></li>
+                <li class="header-link"><a href="" class="header-list-nav">Контакты</a></li>
             </ul>
         </nav>
             <ul class="auth-nav list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="contacts-list_item">info@devstudio.com</a>
+                <li class="auth-link_item">
+                    <a href="mailto:info@devstudio.com" class="mail-tel">info@devstudio.com</a>
                 </li>
-                <li>
-                    <a href="tel:+380961111111" class="contacts-list_item">+38 096 111 11 11</a>
+                <li class="auth-link_item">
+                    <a href="tel:+380961111111" class="mail-tel">+38 096 111 11 11</a>
                 </li>
             </ul>
     </div>
@@ -131,17 +130,23 @@
 <!-- підвал сторінки -->
 <footer class="footer-block">
     <div class="container">
-            <a href="./index.html" class="logo-web">Web<span class="logo-footer">Studio</span></a>
-            <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/1dgc2BqWhhMgBrwW8" target="_blank" rel="noopener noreferrer"
-                            class="footer-adress">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@example.com" class="footer-mail">info@example.com</a></li>
-                    <li><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
+        <a href="./index.html" class="logo-web">Web<span class="logo-white">Studio</span></a>
+        <address>
+            <ul class="address-list list">
+                <li class="address-list__item">
+                    <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                        target="_blank" rel="noopener noreferrer" class="address-list__link">г. Киев, пр-т Леси
+                        Украинки, 26</a>
+                </li>
+                <li class="address-list__item">
+                    <a lang="en" href="mailto:info@example.com" class="address-list__contacts">info@example.com</a>
+                </li>
+                <li class="address-list__item">
+                    <a lang="en" href="tel:+380991111111" class="address-list__contacts">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </div>
-    
 </footer>
 </body>
 </html>
