--- a/portfolio.html
+++ b/portfolio.html
@@ -22,17 +22,17 @@
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
                 <nav class="header-nav">
                     <ul class="header-list list">
-                        <li><a href="./index.html" class="header-list-nav">Студия</a></li>
-                        <li><a href="/" class="header-list-nav active">Портфолио</a></li>
-                        <li><a href="" class="header-list-nav">Контакты</a></li>
+                        <li class="header-link"><a href="./index.html" class="header-list-nav">Студия</a></li>
+                        <li class="header-link"><a href="/" class="header-list-nav active">Портфолио</a></li>
+                        <li class="header-link"><a href="" class="header-list-nav">Контакты</a></li>
                     </ul>
                 </nav>
-                <ul class="auth-nav">
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="auth-mail">info@devstudio.com</a>
+                <ul class="auth-nav list">
+                    <li class="auth-link_item">
+                        <a href="mailto:info@devstudio.com" class="mail-tel">info@devstudio.com</a>
                     </li>
-                    <li>
-                        <a href="tel:+380961111111" class="auth-tel">+38 096 111 11 11</a>
+                    <li class="auth-link_item">
+                        <a href="tel:+380961111111" class="mail-tel">+38 096 111 11 11</a>
                     </li>
                 </ul>
         </div>
@@ -63,63 +63,63 @@
 
         <ul class="portfolio-works">
             <li class="portfolio-list">
-                    <img src="./images/01technokryak.jpg" alt="веб-сайт Тенокряк" height="294" width="370" />
+                    <img class="portfolio-img" src="./images/01technokryak.jpg" alt="веб-сайт Тенокряк" height="294" width="370" />
                     <div class="portfolio-links">
                         <h2>Технокряк</h2>
                         <p>Маркетинг</p>
                     </div>
             </li>
             <li class="portfolio-list">
-                <img src="./images/02poster_orlean.jpg" alt="Постер New Orlean" height="294" width="370" />
+                <img class="portfolio-img" src="./images/02poster_orlean.jpg" alt="Постер New Orlean" height="294" width="370" />
                 <div class="portfolio-links">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Приложение</p>
                 </div>
             </li>
             <li class="portfolio-list">
-                <img src="./images/03seafood.jpg" alt="веб-сайт Ресторан Seafood" height="294" width="370" />
+                <img class="portfolio-img" src="./images/03seafood.jpg" alt="веб-сайт Ресторан Seafood" height="294" width="370" />
                 <div class="portfolio-links">
                     <h2>Ресторан Seafood</h2>
                     <p>Веб-сайт</p>
                 </div>
             </li>
             <li class="portfolio-list">
-                <img src="./images/04prime.jpg" alt="Маркетинг Проект Prime" height="294" width="370" />
+                <img class="portfolio-img" src="./images/04prime.jpg" alt="Маркетинг Проект Prime" height="294" width="370" />
                 <div class="portfolio-links">
                     <h2>Проект Prime</h2>
                     <p>Маркетинг</p>
                 </div>
             </li>
             <li class="portfolio-list">
-                <img src="./images/05boxes.jpg" alt="Приложение Проект Boxes" height="294" width="370" />
+                <img class="portfolio-img" src="./images/05boxes.jpg" alt="Приложение Проект Boxes" height="294" width="370" />
                 <div class="portfolio-links">
                     <h2>Проект Boxes</h2>
                     <p>Приложение</p>
                 </div>
             </li>
         <li class="portfolio-list">
-                <img src="./images/06Inspiration.jpg" alt="Веб-сайт Inspiration has no Borders" height="294" width="370" />
+                <img class="portfolio-img" src="./images/06Inspiration.jpg" alt="Веб-сайт Inspiration has no Borders" height="294" width="370" />
                 <div class="portfolio-links">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </div>
             </li>
             <li class="portfolio-list">
-                <img src="./images/07limit.jpg" alt="Дизайн Издание Limited Edition" height="294" width="370" />
+                <img class="portfolio-img" src="./images/07limit.jpg" alt="Дизайн Издание Limited Edition" height="294" width="370" />
                 <div class="portfolio-links">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </div>
             </li>
             <li class="portfolio-list">
-                <img src="./images/08lab.jpg" alt="Проект LAB" height="294" width="370" />
+                <img class="portfolio-img" src="./images/08lab.jpg" alt="Проект LAB" height="294" width="370" />
                 <div class="portfolio-links">
                     <h2>Проект LAB</h2>
                     <p>Маркетинг</p>
                 </div>
             </li>
             <li class="portfolio-list">
-                <img src="./images/09growing.jpg" alt="Развитие бизнеса" height="294" width="370" />
+                <img class="portfolio-img" src="./images/09growing.jpg" alt="Развитие бизнеса" height="294" width="370" />
                 <div class="portfolio-links">
                     <h2>Growing Business</h2>
                     <p>Приложение</p>
@@ -132,15 +132,25 @@
 
     <!-- підвал сторінки -->
     <footer class="footer-block">
-        <a href="./index.html" class="logo-web">Web<span class="logo-footer">Studio</span></a>
-        <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/1dgc2BqWhhMgBrwW8" target="_blank" rel="noopener noreferrer"
-                        class="footer-adress">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" class="footer-mail">info@example.com</a></li>
-                <li><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+            <div class="container">
+                <a href="./index.html" class="logo-web">Web<span class="logo-white">Studio</span></a>
+                <address>
+                    <ul class="address-list list">
+                        <li class="address-list__item">
+                            <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                                target="_blank" rel="noopener noreferrer" class="address-list__link">г. Киев, пр-т Леси
+                                Украинки, 26</a>
+                        </li>
+                        <li class="address-list__item">
+                            <a lang="en" href="mailto:info@example.com" class="address-list__contacts">info@example.com</a>
+                        </li>
+                        <li class="address-list__item">
+                            <a lang="en" href="tel:+380991111111" class="address-list__contacts">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+        </footer>
     </footer>
 </body>
 
