--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
 
 <!-- Внимание к деталям -->
-<section class="section">
-    <div class="block">
-            <h2 class="company">Премущества компании</h2>
-            <ul class="details-list">
+<section class="benefits section">
+    <div class="container">
+            <h2 class="our-company visually-hidden">Премущества компании</h2>
+            <ul class="details-list list">
                 <li class="details">
                     <h3 class="details-title">Внимание к деталям</h3>
                     <p class="details-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -74,8 +74,8 @@
 </section>
 
 <!-- блок "Чем мы занимаемся" -->
-<section>
-    <div class="block-works">
+<section class="section">
+    <div class="container">
     <h2 class="section-works">Чем мы занимаемся</h2>
     <ul class="works list">
         <li class="img-works"><img src="./images/web.jpg" alt="програмування" height="294" width="370" /></li>
@@ -88,8 +88,8 @@
 
 <!-- блок "наша команда" -->
 <div>
-    <section class="team">
-        <div class="block-team"> 
+    <section class="team section">
+        <div class="container"> 
         <h2 class="section-team">Наша команда</h2>
         <ul class="allteam list">
             <li class="members" >
