--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                     <button type="button" class="item-button">Маркетинг</button>
                 </li>
             </ul>
-        <ul class="portfolio-works">
+        <ul class="portfolio-works list">
             <li class="portfolio-list">
                     <img class="portfolio-img" src="./images/01technokryak.jpg" alt="веб-сайт Тенокряк" height="294" width="370" />
                     <div class="portfolio-links">
